force-app/main/default/objects/ATP_History__c/ATP_History__c.object-meta.xml
<CustomObject>
    <label>ATP History</label>
    <nameField>
        <displayFormat>ATPH-{0000000}</displayFormat>
        <label>ATP History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ATP History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>