force-app/main/default/objects/ATP_History__c/fields/ATP1__c.field-meta.xml
<CustomField>
    <fullName>ATP1__c</fullName>
    <label>D(00-14)(Tons)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>