force-app/main/default/objects/ATP_History__c/fields/ATP2__c.field-meta.xml
<CustomField>
    <fullName>ATP2__c</fullName>
    <label>D(15-28)(Tons)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>