force-app/main/default/objects/ATP_History__c/fields/ATP3__c.field-meta.xml
<CustomField>
    <fullName>ATP3__c</fullName>
    <label>D(29-61)(Tons)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>