force-app/main/default/objects/ATP_History__c/fields/ATP_Input_Time__c.field-meta.xml
<CustomField>
    <fullName>ATP_Input_Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morning</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>