force-app/main/default/objects/ATP_History__c/fields/ATP_Parent__c.field-meta.xml
<CustomField>
    <fullName>ATP_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ATP Parent</label>
    <referenceTo>ATP__c</referenceTo>
    <relationshipLabel>ATP History</relationshipLabel>
    <relationshipName>ATP_History</relationshipName>
    <type>Lookup</type>
</CustomField>