force-app/main/default/objects/ATP_History__c/fields/Batch_ATP_29_61_Cond__c.field-meta.xml
<CustomField>
    <fullName>Batch_ATP_29_61_Cond__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch ATP (29-61) Cond</label>
    <type>Checkbox</type>
</CustomField>