force-app/main/default/objects/ATP_History__c/fields/Batch_ATP_29_61_Value__c.field-meta.xml
<CustomField>
    <fullName>Batch_ATP_29_61_Value__c</fullName>
    <label>Batch ATP (29-61)(Tons) Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>