force-app/main/default/objects/ATP_History__c/fields/Comment_Forward_Sales__c.field-meta.xml
<CustomField>
    <fullName>Comment_Forward_Sales__c</fullName>
    <label>Comment Forward Sales</label>
    <type>TextArea</type>
</CustomField>