force-app/main/default/objects/ATP_History__c/fields/Datetime__c.field-meta.xml
<CustomField>
    <fullName>Datetime__c</fullName>
    <formula>TEXT( Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Datetime</label>
    <type>Text</type>
</CustomField>