force-app/main/default/objects/ATP_History__c/fields/History_Type__c.field-meta.xml
<CustomField>
    <fullName>History_Type__c</fullName>
    <label>History Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ATP</fullName>
            </value>
            <value>
                <fullName>AMV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>