force-app/main/default/objects/ATP_History__c/fields/Lifting_Day1__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Day1__c</fullName>
    <label>Lifting Day1</label>
    <type>Date</type>
</CustomField>