force-app/main/default/objects/ATP_History__c/fields/Lifting_Day2__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Day2__c</fullName>
    <label>Lifting Day2</label>
    <type>Date</type>
</CustomField>