force-app/main/default/objects/ATP_History__c/fields/Lifting_Day3__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Day3__c</fullName>
    <label>Lifting Day3</label>
    <type>Date</type>
</CustomField>