force-app/main/default/objects/ATP_History__c/fields/Lifting_Validity_From1__c.field-meta.xml
<CustomField>
    <fullName>Lifting_Validity_From1__c</fullName>
    <label>Lifting Validity From1</label>
    <type>Date</type>
</CustomField>