force-app/main/default/objects/ATP_History__c/fields/Live_00_14__c.field-meta.xml
<CustomField>
    <fullName>Live_00_14__c</fullName>
    <label>Live(00-14)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>