force-app/main/default/objects/ATP_History__c/fields/Live_15_28__c.field-meta.xml
<CustomField>
    <fullName>Live_15_28__c</fullName>
    <label>Live(15-28)(Tons)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>