force-app/main/default/objects/ATP_History__c/fields/Live_29_61__c.field-meta.xml
<CustomField>
    <fullName>Live_29_61__c</fullName>
    <label>Live(29-61)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>