force-app/main/default/objects/ATP_History__c/fields/Live_Online_00_14__c.field-meta.xml
<CustomField>
    <fullName>Live_Online_00_14__c</fullName>
    <label>Live Online (00-14) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>