force-app/main/default/objects/ATP_History__c/fields/Minimum_Online_Volume__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Online_Volume__c</fullName>
    <label>Minimum Online Volume (00-14) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>