force-app/main/default/objects/ATP_History__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <formula>Plant_Name__r.Plant_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plant</label>
    <type>Text</type>
</CustomField>