force-app/main/default/objects/ATP_History__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant Name</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>ATP History</relationshipLabel>
    <relationshipName>ATP_History</relationshipName>
    <type>Lookup</type>
</CustomField>