force-app/main/default/objects/ATP_History__c/fields/Sales_00_14__c.field-meta.xml
<CustomField>
    <fullName>Sales_00_14__c</fullName>
    <label>Sales(00-14)(Tons)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>