force-app/main/default/objects/ATP_History__c/fields/Split_Volume__c.field-meta.xml
<CustomField>
    <fullName>Split_Volume__c</fullName>
    <label>Online Volume Percentage (00-14) TON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>