force-app/main/default/objects/ATP_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plant_Name__c</columns>
    <columns>Sales_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>